made functionallity, backend

--- a/code/index.html
+++ b/code/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     
-    <script src="javescript.js"></script>
+    <script src="javescript.js">
+        
+    </script>
 </body>
 </html>
