--- a/code/index.html
+++ b/code/index.html
@@ -6,9 +6,21 @@
     <title>Aflevering 2</title>
 </head>
 <body>
-    
+<table id="musikarkiv">
+    <thead>
+        <tr>
+            <th>Album</th>
+            <th>Artist</th>
+            <th>Rating</th>
+            <th>Productionyear</th>
+        </tr>
+    </thead>
+    <tbody>
+
+    </tbody>
+</table>
+
     <script src="javescript.js">
-        
     </script>
 </body>
 </html>
