--- a/code/index.html
+++ b/code/index.html
@@ -6,6 +6,8 @@
     <title>Aflevering 2</title>
 </head>
 <body>
+    <div id="content"></div>
+
 <table id="musikarkiv">
     <thead>
         <tr>
