MAngler kun css

--- a/code/index.html
+++ b/code/index.html
@@ -6,8 +6,11 @@
     <title>Aflevering 2</title>
 </head>
 <body>
-    <div id="content"></div>
+<h1>Musicarchive</h1>
+
+<div id="content"></div>
     <script src="javescript.js">
+
     </script>
 </body>
 </html>
